fix(meeting_interne): rename 'statut' to 'status' and update related logic
- Renamed the field 'statut' to 'status' in the JSON and Python files for consistency.
- Updated the logic in the Python code to reference the new field name.
- Adjusted the HTML print format to reflect the change in field name.

--- a/aurescrm/aures_crm/print_format/compte_rendu_meeting/compte_rendu_meeting.html
+++ b/aurescrm/aures_crm/print_format/compte_rendu_meeting/compte_rendu_meeting.html
@@ -36,7 +36,7 @@
 			</tr>
 			<tr>
 				<td style="padding: 5px;"><strong>Statut:</strong></td>
-				<td style="padding: 5px;"><span style="padding: 3px 10px; border-radius: 3px; background: {% if doc.statut == 'Terminé' %}#27ae60{% elif doc.statut == 'En Cours' %}#f39c12{% else %}#3498db{% endif %}; color: white;">{{ doc.statut }}</span></td>
+				<td style="padding: 5px;"><span style="padding: 3px 10px; border-radius: 3px; background: {% if doc.status == 'Terminé' %}#27ae60{% elif doc.status == 'En Cours' %}#f39c12{% else %}#3498db{% endif %}; color: white;">{{ doc.status }}</span></td>
 			</tr>
 		</table>
 	</div>
